; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_dock.c_acpi_dock_notify_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_dock.c_acpi_dock_notify_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"got notification %#x\0A\00", align 1
@dock = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"unknown notify %#x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8*)* @acpi_dock_notify_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_dock_notify_handler(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = ptrtoint i8* %8 to i64
  store i64 %9, i64* %7, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = call i32 @acpi_device_get_parent_softc(i64 %11)
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @ACPI_VPRINT(i64 %10, i32 %12, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* @dock, align 4
  %16 = call i32 @ACPI_SERIAL_BEGIN(i32 %15)
  %17 = load i32, i32* %5, align 4
  switch i32 %17, label %24 [
    i32 130, label %18
    i32 129, label %18
    i32 128, label %21
  ]

18:                                               ; preds = %3, %3
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @acpi_dock_device_check(i64 %19)
  br label %28

21:                                               ; preds = %3
  %22 = load i64, i64* %7, align 8
  %23 = call i32 @acpi_dock_removal(i64 %22)
  br label %28

24:                                               ; preds = %3
  %25 = load i64, i64* %7, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @device_printf(i64 %25, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  br label %28

28:                                               ; preds = %24, %21, %18
  %29 = load i32, i32* @dock, align 4
  %30 = call i32 @ACPI_SERIAL_END(i32 %29)
  ret void
}

declare dso_local i32 @ACPI_VPRINT(i64, i32, i8*, i32) #1

declare dso_local i32 @acpi_device_get_parent_softc(i64) #1

declare dso_local i32 @ACPI_SERIAL_BEGIN(i32) #1

declare dso_local i32 @acpi_dock_device_check(i64) #1

declare dso_local i32 @acpi_dock_removal(i64) #1

declare dso_local i32 @device_printf(i64, i8*, i32) #1

declare dso_local i32 @ACPI_SERIAL_END(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
